--- a/src/components/FirstSection.css
+++ b/src/components/FirstSection.css
@@ -77,4 +77,26 @@
     padding-right: 70px;
     border-radius: 30px;
   }
+
+  
+  @media screen and (max-width: 600px) {
+    .firstSectionStyle {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border-top: 1px;
+      border-color: #5aa469;
+    }
+    .firstSectionStyle h1,p {
+      display: grid;
+      justify-content: none;
+      text-align: none;
+    }
+    .peopleImage {
+      height: 50%;
+      justify-content: center;
+    }
+  }
+
+
   
