--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Titillium Web", sans-serif;
+  font-family: "", sans-serif;
 }
 
 header {
@@ -116,6 +116,7 @@ header .nav-btn {
 
 .container {
   display: flex;
+  align-items: center;
   flex-direction: row;
   background-color: #eeeeee;
   justify-content: space-between;
@@ -148,3 +149,75 @@ header .nav-btn {
 .headerNames a:hover {
   color: #7fb77e;
 }
+
+ /* .container .nav-btn {
+  color: #1e5128;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 5px;
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
+  .container .headerNames {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    flex-direction: column;
+    transition: 1s;
+    transform: translateY(-100vh);
+  }
+  .container .responsive-nav {
+    transform: none;
+  }
+  }
+
+  .container .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  } */
+
+
+  @media screen and (max-width: 600px) {
+    .container {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .logo {
+      padding: 10px;
+    }
+
+    .headerNames  {
+      float: none;
+      width: 100%;
+      float: left;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      color: #5aa469;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+    }
+
+    .headerNames a {
+      font-size: 15px;
+    }
+  }
