Add existing project files to Git

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -10,3 +10,12 @@
     padding: 100px;
 }
 
+.icons {
+    align-items: center;
+    color: #5aa469;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+}
+
