--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,8 +1,8 @@
 .full-container {
-    /* text-align: center; */
+    text-align: center;
     display: flex;
     justify-content: center;
-    padding-top: 50px;
+    padding-top: 70px;
     width: 100%;
   
   }
@@ -16,15 +16,20 @@
     display: column;
     align-items: center;
     justify-content: center;
-    width: 250px;
+    width: 600px;
     overflow: hidden;
-    box-shadow: 0px 0px 15px -5px;
+    /* box-shadow: 0px 0px 15px -5px; */
     transition: ease-in-out;
+  }
+
+  .card-logo {
+    width: 50px;
+    height: 50px;
   }
   
   .card:hover {
     transform: scale(1.1);
-    box-shadow: 0px 0px 15px 0px;
+    /* box-shadow: 0px 0px 15px 0px; */
     height: 350px;
   }
   
