--- a/src/components/CardThree.css
+++ b/src/components/CardThree.css
@@ -46,6 +46,13 @@
     margin-bottom: 0;
     transform: rotate(45deg);
   }
+
+
+    /* .lastCard img{ 
+    float: right;
+    margin-bottom: 0;
+    transform: rotate(45deg);
+  } */
   
   .card-title,
   .description {
@@ -91,5 +98,16 @@
     color: #5aa469;
     text-decoration: none;
     font-weight: bold;
+  } 
+  
+  .LastCardImage {
+    align-content: flex-end;
+    float: right;
+    height: 40px;
+    width: 40px;
+    transform: rotate(90deg);
   }
+
+
+  
   
