--- a/src/components/FirstSection.css
+++ b/src/components/FirstSection.css
@@ -83,20 +83,88 @@
     .firstSectionStyle {
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       border-top: 1px;
       border-color: #5aa469;
     }
     .firstSectionStyle h1,p {
       display: grid;
-      justify-content: none;
+      justify-content: flex-start;
       text-align: none;
+      justify-self: start;
     }
     .peopleImage {
+      position: relative;
       height: 50%;
-      justify-content: center;
+      justify-content: flex-start;
+      justify-self: start;
+    }
+
+    .columnText .firstText h1 {
+      position: relative;
+      margin-left: 0;
+      padding-left: 0;
+      justify-self: start;
+      
+    }
+
+    .columnText .peopleImage {
+      position: relative;
+      justify-self: start;
+      height: 80px;
+      width: 80px;
+      margin: 50px;
+      padding-top: 20px;
     }
   }
 
+  .animated-text {
+    position: relative;
+    top: 50%;
+    background-color: #eeeeee;
+    /* transform: translate(50%, -50%); */
+    overflow: hidden;
+  }
 
+  .firstSectionStyle .line {
+   background-color: #eeeeee;
+  }
   
+  .paragraphText p:before {
+    content:" ";
+    width: 6px;
+    height: 8px;
+    border-radius: 50%;
+    margin-right: 5px;
+    display: inline-block;
+    background-color: #29cf00;
+    vertical-align: middle;
+}
+   .line:first-child {
+    
+    animation: anim 15s infinite;
+   }
+
+   @keyframes anim {
+    0%{
+      margin-top: 0;
+    }
+    16%{
+      margin-top: -60px;
+    }
+    33%{
+      margin-top: -120px;
+    }
+    50%{
+      margin-top: -180px;
+    }
+    66%{
+      margin-top: -120;
+    }
+    82%{
+      margin-top: -60;
+    }
+    100%{
+      margin-top: 0;
+    }
+   }
